<resources>
	<string name="app_name">PoChat</string>

	<!-- TODO: Remove or change this placeholder text -->
	<string name="hello_blank_fragment">Hello blank fragment</string>
	<string name="text_login">LOGIN</string>
	<string name="username">email</string>
	<string name="password">Password</string>

	<string name="login.message.email">email</string>
	<string name="login.message.password">Password</string>
	<string name="login.message.signin">Login</string>
	<string name="login.message.signup">Sign Up</string>
	<string name="login.notice.message.useradded">Anda berhasil terdaftar</string>
	<string name="login.error.message.signin">Tidak Dapat Login %s</string>
	<string name="login.error.message.signup">Tidak bisa mendaftar dengan email yang sama %s</string>
	<string name="contactlist.menu.action.signoff">Log out</string>
	<string name="contactlist.title">Kontak</string>

	<string name="addcontact.message.title">Tambah Kontak</string>
	<string name="addcontact.message.add">Tambah</string>
	<string name="addcontact.message.cancel">Cencel</string>
	<string name="addcontact.message.contactadded">Kontak berhasil ditambah</string>
	<string name="addcontact.error.message">pengguna tidak terdaftar</string>
	<string name="eventKampus">Event Kampus</string>
	<string name="eventLuar">Event Luar Kampus</string>
	<string name="masukkan_date">DD-MM-YYYY</string>
	<string name="masukkan_time">HH:MM</string>
	<string name="deskripsi">Deskripsi Event</string>
	<string name="img_user">image</string>
</resources>
