<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/activity_main"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	tools:context="app.pochat.rofiqoff.com.pochat.login.ui.LoginActivity">

	<include
		android:id="@+id/toolbar_login"
		layout="@layout/toolbar"/>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="@color/primary"
		android:orientation="vertical">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:padding="20dp"
			tools:ignore="UseCompoundDrawables">

			<ImageView
				android:layout_width="match_parent"
				android:layout_height="80dp"
				android:layout_gravity="center_vertical"
				android:contentDescription="@string/app_name"
				android:src="@drawable/ic_action_action_verified_user"/>

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center_horizontal"
				android:text="PoChat"
				android:textColor="@color/colorText"
				android:textSize="12pt"
				android:textStyle="bold"/>
		</LinearLayout>

		<ScrollView
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:orientation="vertical">

				<android.support.design.widget.TextInputLayout
					style="@style/EditTextHint"
					android:layout_width="match_parent"
					android:layout_height="wrap_content">

					<EditText
						android:id="@+id/editText_usernameLogin"
						android:layout_width="match_parent"
						android:layout_height="50dp"
						android:layout_marginBottom="3dp"
						android:layout_marginLeft="16dp"
						android:layout_marginRight="16dp"
						android:hint="@string/username"
						android:maxLines="1"
						android:paddingLeft="16dp"
						android:paddingRight="16dp"
						android:singleLine="true"
						android:textColor="#FFFFFF"
						android:textSize="20sp"/>
				</android.support.design.widget.TextInputLayout>

				<android.support.design.widget.TextInputLayout
					style="@style/EditTextHint"
					android:layout_width="match_parent"
					android:layout_height="wrap_content">

					<EditText
						android:id="@+id/editText_passwordLogin"
						android:layout_width="match_parent"
						android:layout_height="50dp"
						android:layout_marginBottom="3dp"
						android:layout_marginLeft="16dp"
						android:layout_marginRight="16dp"
						android:hint="@string/password"
						android:inputType="textPassword"
						android:maxLines="1"
						android:paddingLeft="16dp"
						android:paddingRight="16dp"
						android:singleLine="true"
						android:textColor="#FFFFFF"
						android:textSize="20sp"/>
				</android.support.design.widget.TextInputLayout>

			</LinearLayout>

		</ScrollView>

		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent">

			<Button
				android:id="@+id/button_signUp"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_alignParentBottom="true"
				android:background="@android:color/transparent"
				android:fontFamily="casual"
				android:text="Belum Terdaftar? Silahkan Klik disini"
				android:textColor="@color/colorText"/>

			<Button
				android:id="@+id/button_login"
				android:layout_width="match_parent"
				android:layout_height="60dp"
				android:layout_alignBottom="@+id/button_signUp"
				android:layout_alignParentEnd="true"
				android:layout_alignParentRight="true"
				android:layout_marginBottom="55dp"
				android:layout_marginLeft="16dp"
				android:layout_marginRight="16dp"
				android:background="@drawable/custom1"
				android:text="@string/text_login"
				android:textColor="@color/primary"
				android:textSize="10pt"/>

			<ProgressBar
				style="?android:attr/progressBarStyleLarge"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/progressBar"
				android:layout_above="@+id/button_login"
				android:layout_centerInParent="true"
				android:visibility="gone" />

		</RelativeLayout>

	</LinearLayout>
</LinearLayout>
